---
source: crates/squawk_linter/src/rules/disallow_unique_constraint.rs
expression: errors
---
[
    Violation {
        code: DisallowedUniqueConstraint,
        message: "Adding a `UNIQUE` constraint requires an `ACCESS EXCLUSIVE` lock which blocks reads and writes to the table while the index is built.",
        text_range: 37..43,
        messages: [],
    },
]
